--- a/project9_cohort4-master/project9_cohort4.client/src/app/Admin/dashboard/dashboard.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Admin/dashboard/dashboard.component.html
@@ -26,6 +26,27 @@
             </a>
           </li>
 
+           <li>
+            <a routerLink="/dashboard/AllCategory" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+              <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">All Category</span>
+            </a>
+          </li>
+          <li>
+            <a routerLink="/dashboard/AddCategory" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+              <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Add Category</span>
+            </a>
+          </li>
+           <li>
+            <a routerLink="/dashboard/AllShelters" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+              <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">All Shelters</span>
+            </a>
+          </li>
+          <li>
+            <a routerLink="/dashboard/AddShelters" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+              <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Add Shelters</span>
+            </a>
+          </li>
+
           <li>
             <a routerLink="/dashboard/allrequests" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
               <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Adoption Requests</span>
