--- a/project9_cohort4-master/project9_cohort4.client/src/app/Adoptioh/animal-form/animal-form.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Adoptioh/animal-form/animal-form.component.html
@@ -31,7 +31,7 @@
           <!-- Housing Type -->
           <div class="form-group mb-4">
             <label for="housingType">Housing Type</label>
-            <select class="form-control" id="housingType" [(ngModel)]="adoptionDetails.housingType" name="housingType">
+            <select class="form-control" id="housingType" [(ngModel)]="adoptionDetails.userLivingStatus" name="userLivingStatus">
               <option value="Apartment">Apartment</option>
               <option value="House">House</option>
               <option value="Other">Other</option>
@@ -41,7 +41,7 @@
           <!-- Financial Status -->
           <div class="form-group mb-4">
             <label for="financialStatus">Financial Status</label>
-            <input type="text" class="form-control" id="financialStatus" [(ngModel)]="adoptionDetails.userFinancialStatus" name="userFinancialStatus" required>
+            <input type="text" class="form-control" id="financialStatus" [(ngModel)]="adoptionDetails.UserFinaincalStatus" name="UserFinaincalStatus" required>
           </div>
 
           <!-- Flat Type -->
