--- a/project9_cohort4-master/project9_cohort4.client/src/app/Adoptioh/services/services.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Adoptioh/services/services.component.html
@@ -6,9 +6,9 @@
         <div class="service-card border radius-16 p-4 text-center shadow-lg hover-shadow">
           <!-- Service Image -->
           <div class="service-image-container">
-            <img [src]="'https://localhost:7001' + service.imagePath" />
+<img src="https://localhost:7001/api/Animals1/getImages/{{ service.image }}" width="300" height="300" />
 
-
+            
 
           </div>
 
