--- a/project9_cohort4-master/project9_cohort4.client/src/app/Admin/not-acceptposts/not-acceptposts.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Admin/not-acceptposts/not-acceptposts.component.html
@@ -1,5 +1,5 @@
 <hr />
-<h2 class="text-center my-4">Customer Testimonials</h2> <!-- Title for the table -->
+<h2 class="text-center my-4"> Not Accept Post </h2> <!-- Title for the table -->
 <hr />
 <table class="table table-striped">
   <thead>
