--- a/project9_cohort4-master/project9_cohort4.client/src/app/Admin/posts-admin/posts-admin.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Admin/posts-admin/posts-admin.component.html
@@ -1,5 +1,5 @@
 <hr />
-<h2 class="text-center my-4">All Customer Testimonials</h2> <!-- Title for the table -->
+<h2 class="text-center my-4">All Posts </h2> <!-- Title for the table -->
 <hr />
 
 <table class="table table-striped">
