--- a/project9_cohort4-master/project9_cohort4.client/src/app/Admin/update-category/update-category.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Admin/update-category/update-category.component.html
@@ -72,7 +72,7 @@
 
 
       <!-- Submit Button -->
-      <button type="submit" class="w-100 btn-primary mt-lg-6">Add Category</button>
+      <button type="submit" class="w-100 btn-primary mt-lg-6">Update Category</button>
     </form>
   </div>
 </div>
