--- a/project9_cohort4-master/project9_cohort4.client/src/app/Batoul/user-reset-password/user-reset-password.component.html
+++ b/project9_cohort4-master/project9_cohort4.client/src/app/Batoul/user-reset-password/user-reset-password.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="main-body">
-    <div class="row" *ngIf="userId != ''">
+    <div class="row" *ngIf="userId || userIdLS">
 
       <h2>User Reset Password</h2>
 
@@ -59,7 +59,7 @@
 
 
 
-    <div class="row">
+    <div class="row" *ngIf="!userId && !userIdLS">
 
       <h1>please login to be able to reset your password</h1>
 
